// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package fcp.confidentialcompute;

import "fcp/protos/confidentialcompute/signed_endorsements.proto";
import "fcp/protos/federatedcompute/confidential_encryption_config.proto";

option java_multiple_files = true;
option java_package = "com.google.intelligence.fcp.confidentialcompute";

// Configuration for encrypting data uploads and verifying data access policy
// for the task.
message DataUploadConfig {
  // The configuration for encrypting data uploads.
  google.internal.federatedcompute.v1.ConfidentialEncryptionConfig
      confidential_encryption_config = 1;

  // A set of oak SignedEndorsement protos for the task data access policy.
  SignedEndorsements signed_endorsement = 2;
}
